fix: background image full coverage on mobile + admin css update

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ html {
   scroll-behavior: smooth;
   min-height: 100%;
   background-color: #eaedff;
-  background-image: url("./assets/background.png");
+  background-image: url("./assets/bg2.png");
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
